tests/ui/feature-gates/feature-gate-unsafe_fields.without_gate.stderr
error[E0658]: `unsafe` fields are experimental
  --> $DIR/feature-gate-unsafe_fields.rs:9:5
   |
LL |     unsafe field: (),
   |     ^^^^^^
   |
   = note: see issue #132922 <https://github.com/rust-lang/rust/issues/132922> for more information
   = help: add `#![feature(unsafe_fields)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `unsafe` fields are experimental
  --> $DIR/feature-gate-unsafe_fields.rs:17:15
   |
LL |     Variant { unsafe field: () },
   |               ^^^^^^
   |
   = note: see issue #132922 <https://github.com/rust-lang/rust/issues/132922> for more information
   = help: add `#![feature(unsafe_fields)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `unsafe` fields are experimental
  --> $DIR/feature-gate-unsafe_fields.rs:24:5
   |
LL |     unsafe field: (),
   |     ^^^^^^
   |
   = note: see issue #132922 <https://github.com/rust-lang/rust/issues/132922> for more information
   = help: add `#![feature(unsafe_fields)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
